[package]
name = "wevent"
version = "0.1.0"
edition = "2024"

[lib]
name = "wevent"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "wevent-bin"
path = "src/main.rs"

[dependencies]
log = "0.4.27"
wasi = "0.14.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"

[profile.release]
lto = true
opt-level = 3