[package]
name = "wgeneric"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "wgeneric-bin"
path = "src/main.rs"

[lib]
name = "wgeneric"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = { version = "1.0", features = ["derive"] }
wgpu = { version = "25.0.0", features = ["webgpu"] }
pollster = "0.3"

# Native only
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# WASM only
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.77", features = [
  "console", "Window", "Document", "HtmlCanvasElement", 
  "CanvasRenderingContext2d", "ImageData", "Performance"
]}
js-sys = "0.3.77"
console_error_panic_hook = "0.1"

