[package]
name = "wwindow"
version = "0.1.0"
edition = "2021"

[lib]
name = "wwindow"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "wwindow-bin"
path = "src/main.rs"

[dependencies]
winit = "0.30.8"
wgpu = "25.0.0"
log = "0.4.20"
cfg-if = "1.0"
pollster = "0.3"
glam = "0.30.3"
{bytemuck = "1.23.0", features = ["derive"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wry = "0.51.2"
urlencoding = "2.1.3"
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "25.0.0", features = ["webgpu"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
console_error_panic_hook = "0.1.6"
console_log = "1.0"
js-sys = "0.3.77"
web-sys = { version = "0.3", features = ["Document", "Window", "Element", "HtmlCanvasElement", "console"] }

[profile.release]
opt-level = 2
lto = true
strip = true
codegen-units = 1
